# wise-magpie

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  auto-tasks.md  configuration.md  getting-started.md  penetration-test-report.md  roadmap.md  troubleshooting.md
src/wise_magpie/: __init__.py  __main__.py  cli.py  config.py  constants.py  db.py  mcp_server.py  models.py  url_validation.py
src/wise_magpie/ble/: constants.py  handler.py  service.py
src/wise_magpie/daemon/: runner.py  scheduler.py  signals.py
src/wise_magpie/patterns/: activity.py  predictor.py  schedule.py
src/wise_magpie/quota/: batch.py  claude_api.py  corrections.py  estimator.py  tracker.py  weekly_budget.py
src/wise_magpie/review/: applicator.py  reporter.py
src/wise_magpie/swarm/: advertiser.py
src/wise_magpie/tasks/: manager.py  model_selector.py  prioritizer.py
src/wise_magpie/tasks/sources/: auto_tasks.py  git_todos.py  queue_file.py
src/wise_magpie/webhook/: server.py
src/wise_magpie/worker/: ai_review.py  executor.py  monitor.py  sandbox.py
tests/: conftest.py  test_applicator.py  test_auto_tasks.py  test_ble.py  test_claude_api.py  test_cli.py  test_config.py  test_db.py  test_git_todos.py  test_model_selector.py  test_models.py  test_patterns.py  test_quota.py  test_reporter.py  test_runner.py  test_scheduler.py  test_signals.py  test_tasks.py  test_webhook.py  test_weekly_budget.py  test_worker.py
