[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wise-magpie"
version = "0.1.0"
description = "Maximize Claude Max $200 plan quota utilization by running tasks during idle time"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
wise-magpie = "wise_magpie.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
